--- a/components/Terms/Terms.module.sass
+++ b/components/Terms/Terms.module.sass
@@ -11,6 +11,8 @@
    line-height: 32px
    font-weight: 700
    margin-bottom: 16px
+   letter-spacing: .5px
+
 
 
 .term
@@ -32,6 +34,8 @@
       font-weight: 500
       line-height: 28px
       margin-bottom: 2px
+      letter-spacing: .5px
+
 
    &__description
       font-size: 15px
