--- a/components/_modals/City/ModalCity.module.sass
+++ b/components/_modals/City/ModalCity.module.sass
@@ -72,6 +72,7 @@
 
    &__title
       font-size: 18px
+      letter-spacing: .5px
       margin-bottom: 8px
 
 
