--- a/components/_modals/OrderThx/OrderThx.module.sass
+++ b/components/_modals/OrderThx/OrderThx.module.sass
@@ -6,10 +6,10 @@
    padding: 70px 114px
    text-align: center
    width: auto
-   letter-spacing: normal
 
 
 .title
+   letter-spacing: .5px
    margin-bottom: 8px
 
 
