--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -8,7 +8,6 @@ body
    display: table-cell
    font-family: 'MegaFon Graphik LC', sans-serif
    color: #333333
-   letter-spacing: .5px
    background: linear-gradient(81.05deg, #01873F -35.54%, #00B956 61.15%, #14CD6A 110.63%)
 
    @media (max-width: $mobile)
